2006-08-01  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: 
	- Turned off interpolation when timestamps are uneven. Instead just warns on console and computes the error in Tau.
	- Reports error in Tau.
	* laser_msd_crossover.m:
	- Added. A utility that computes average msd for an ensemble of tracking files. 
	- Computes msd for bead position, position error and stage position and plots them to show crossover.
	- Handy to determine feedback bandwidth.
	* laser_msd.m:
	- Changed to call newly added logerrorbar instead of manually setting up the errorbars.
	- Some comments about the bad interface to external code that needs to be improved at some point.

2006-07-11  Jeremy Cribb <jcribb@email.unc.edu>
	- msd.m: suppressed warning for dividing by zero when requested window is too large.  Also removed NaN's that were reported when the window size was too large.

2006-07-10  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: Fixed a typo and a bug in calculation of default Tau.

2006-07-05  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: 
	- Fixed nasty errors in the documentation and brought it up to date.
	- Exposed the standard error results to the output.
2006-06-20  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: Now puts five points (instead of 3) in each decade for default window vector.
2006-06-05  Kalpit Desai <kvdesai@email.unc.edu>
	* laser_msd.m: 
	- Essentially rewrote the whole module. Now allows to look at diffusion along each axis (X,Y,Z) as well as in each plane (XY, YZ, ZX) independently.
	- Output interface had to be changed to report 1D and 2D diffusion parameters
	- Corrected documentation to reflect changes in the interface.
	* msdbase.m: Added some comments

2006-06-05  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: corrected documentation and added w to output structure.

2006-05-19  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: fixed minor bug in determination of w.

2006-05-16  Jeremy Cribb <jcribb@email.unc.edu>